[package]
name = "chat-app-rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "chat_app"
path = "src/lib.rs"

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
time = "0.3.15"
shuttle-service = { version = "0.32.0", features = ["web-rocket"] }
ethers = { version = "2.0.10", features = ["abigen", "contracts", "http"] }

[dev-dependencies]
rand = "0.8"






