[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
time = "0.3.15"
shuttle-service = "0.11.0"
rocket_sync_db_pools = "0.1.0-rc.2"

[dev-dependencies]
rand = "0.8"
