[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
time = "0.3.15"
shuttle-service = { version = "0.11.0", features = ["web-rocket"] }
ethers = { version = "2.0.10", features = ["abigen", "contracts", "http"] }


[dev-dependencies]
rand = "0.8"


[lib]
name = "chat_app"
path = "src/lib.rs"